# chatcompletion-effectful

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  build.sh  cabal.project  cabal.project.freeze  chatcompletion-effectful.cabal  hie.yaml  llmchat-effectful.cabal  package.yaml  run-ghcid.sh  run-ghciwatch.sh  stack.yaml
app/: MinimalExample.hs
benchmark/: BenchmarkSpec.hs  Main.hs
benchmark/ChatCompletion/Benchmark/: Common.hs  Google.hs  OpenAI.hs
examples/: Main.hs  StreamingExample.hs
integration-test/ChatCompletion/: Common.hs  OpenAISpec.hs  PostgresLoggerSpec.hs  PostgresPoolSpec.hs  PostgresSpec.hs
integration-test/ChatCompletion/Provider/: GoogleSpec.hs  OpenAISpec.hs
integration-test/Effect/ChatCompletion/: OpenAISpec.hs  PostgresLoggerSpec.hs  PostgresSpec.hs
specs/: stateful_interface.md
src/: ChatCompletion.hs  LlmChat.hs
src/ChatCompletion/: ChatMsg.hs  Effect.hs  Error.hs  OpenAI.hs  PostgresLogger.hs  Tool.hs  Types.hs
src/ChatCompletion/Providers/: Google.hs  OpenAI.hs
src/ChatCompletion/Providers/Google/: API.hs  Convert.hs  Types.hs
src/ChatCompletion/Providers/OpenAI/: ChatCompletion.hs
src/ChatCompletion/Storage/: Effect.hs  InMemory.hs  Postgres.hs
src/Effect/: AiChat.hs  AiChatStorage.hs  ChatCompletion.hs  ChatCompletionStorage.hs  LlmChat.hs
src/Effect/AiChat/: OpenAI.hs  Types.hs
src/Effect/AiChatStorage/: InMemory.hs
src/Effect/ChatCompletion/: OpenAI.hs  PostgresLogger.hs  Tool.hs  Types.hs
src/Effect/ChatCompletionStorage/: InMemory.hs  Postgres.hs
src/Effectful/: OpenAI.hs
src/LlmChat/: ChatMsg.hs  Effect.hs  Error.hs  PostgresLogger.hs  Tool.hs  Types.hs
src/LlmChat/Providers/: Google.hs
src/LlmChat/Providers/Google/: API.hs  Convert.hs  Types.hs
src/LlmChat/Providers/OpenAI/: ChatCompletion.hs
src/LlmChat/Storage/: Effect.hs  InMemory.hs  Postgres.hs
test/: ProviderAgnosticTests.hs
test/ChatCompletion/: Common.hs  PostgresPoolSpec.hs  PostgresSpec.hs  TestHelpers.hs
test/ChatCompletion/Provider/: GoogleSpec.hs  OpenAISpec.hs
test/ChatCompletion/Storage/: InMemorySpec.hs
test/Effect/ChatCompletion/: OpenAISpec.hs
test/Effect/ChatCompletionStorage/: InMemorySpec.hs
test/LlmChat/: PostgresLoggerSpec.hs  PostgresPoolSpec.hs  PostgresSpec.hs
test/LlmChat/Provider/: GoogleSpec.hs  OpenAISpec.hs
test/LlmChat/Storage/: InMemorySpec.hs
