cabal-version: 3.8

name:           chatcompletion-effectful
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/tommyengstrom/chatcompletion-effectful#readme>
homepage:       https://github.com/tommyengstrom/chatcompletion-effectful#readme
bug-reports:    https://github.com/tommyengstrom/chatcompletion-effectful/issues
author:         Tommy Engström
maintainer:     tommy@tommyengstrom.com
copyright:      2025 Tommy Engström
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/tommyengstrom/chatcompletion-effectful

common shared_opts
  default-language: GHC2024
  default-extensions:
      AllowAmbiguousTypes
      BlockArguments
      DataKinds
      DefaultSignatures
      DeriveAnyClass
      DerivingStrategies
      DerivingVia
      DuplicateRecordFields
      FunctionalDependencies
      GeneralizedNewtypeDeriving
      LambdaCase
      NoFieldSelectors
      NoImplicitPrelude
      OverloadedLabels
      OverloadedLists
      OverloadedStrings
      NoStarIsType
      StrictData
      TemplateHaskell
      TupleSections
      TypeApplications
      TypeFamilyDependencies
      TypeOperators
      ViewPatterns

  ghc-options:
    -Weverything
    -Werror
    -Wno-all-missed-specialisations
    -Wno-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missing-export-lists
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-safe 
    -Wno-unsafe 
    -Wno-missing-kind-signatures 
    -Wno-missing-poly-kind-signatures 
    -Wno-monomorphism-restriction 
    -Wno-missing-role-annotations 
    -Wno-partial-fields 
    -Wno-unused-packages

  build-depends:
      aeson
    , base
    , containers
    , effectful
    , effectful-th
    , generic-lens
    , http-types
    , lens
    , monad-time-effectful
    , openai
    , openapi3
    , postgresql-simple
    , relude
    , text
    , time
    , unliftio
    , uuid
    , vector

library
  import: shared_opts
  exposed-modules:
      ChatCompletion
      ChatCompletion.ChatMsg
      ChatCompletion.Effect
      ChatCompletion.Error
      ChatCompletion.PostgresLogger
      ChatCompletion.Providers.Google
      ChatCompletion.Providers.Google.API
      ChatCompletion.Providers.Google.Convert
      ChatCompletion.Providers.Google.Types
      ChatCompletion.Providers.OpenAI.ChatCompletion
      ChatCompletion.Storage.Effect
      ChatCompletion.Storage.InMemory
      ChatCompletion.Storage.Postgres
      ChatCompletion.Tool
      ChatCompletion.Types
      Effectful.OpenAI
  hs-source-dirs: src
  build-depends:
    , http-api-data
    , http-client
    , http-client-tls
    , resource-pool
    , servant
    , servant-client

test-suite chatcompletion-effectful-test
  import: shared_opts
  main-is: Main.hs
  other-modules:
      ChatCompletion.PostgresLoggerSpec
      ChatCompletion.PostgresPoolSpec
      ChatCompletion.PostgresSpec
      ChatCompletion.Provider.GoogleSpec
      ChatCompletion.Provider.OpenAISpec
      ChatCompletion.Storage.InMemorySpec
      ProviderAgnosticTests
  hs-source-dirs: test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      QuickCheck
    , base64-bytestring
    , chatcompletion-effectful
    , deepseq
    , hashable
    , hspec
    , mtl
    , pretty-simple
    , unordered-containers
    , yaml


