cabal-version: 3.8

name:           llmchat-effectful
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/tommyengstrom/llmchat-effectful#readme>
homepage:       https://github.com/tommyengstrom/llmchat-effectful#readme
bug-reports:    https://github.com/tommyengstrom/llmchat-effectful/issues
author:         Tommy Engström
maintainer:     tommy@tommyengstrom.com
copyright:      2025 Tommy Engström
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/tommyengstrom/llmchat-effectful

common shared_opts
  default-language: GHC2024
  default-extensions:
      AllowAmbiguousTypes
      BlockArguments
      DataKinds
      DefaultSignatures
      DeriveAnyClass
      DerivingStrategies
      DerivingVia
      DuplicateRecordFields
      FunctionalDependencies
      GeneralizedNewtypeDeriving
      LambdaCase
      NoFieldSelectors
      NoImplicitPrelude
      NoStarIsType
      OverloadedLabels
      OverloadedLists
      OverloadedStrings
      RecordWildCards
      StrictData
      TemplateHaskell
      TupleSections
      TypeApplications
      TypeFamilyDependencies
      TypeOperators
      ViewPatterns

  ghc-options:
    -Weverything
    -Werror
    -Wno-all-missed-specialisations
    -Wno-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missing-export-lists
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-safe 
    -Wno-unsafe 
    -Wno-missing-kind-signatures 
    -Wno-missing-poly-kind-signatures 
    -Wno-monomorphism-restriction 
    -Wno-missing-role-annotations 
    -Wno-partial-fields 
    -Wno-unused-packages

  build-depends:
      aeson
    , base
    , containers
    , effectful
    , effectful-th
    , effectful-postgresql
    , generic-lens
    , http-types
    , lens
    , monad-time-effectful
    , openai
    , openapi3
    , postgresql-simple
    , relude
    , text
    , time
    , unliftio
    , uuid
    , vector

library
  import: shared_opts
  mixins:
    , effectful-core (Effectful.Internal.Monad)
  exposed-modules:
      LlmChat
      LlmChat.ChatMsg
      LlmChat.Effect
      LlmChat.Error
      LlmChat.PostgresLogger
      LlmChat.Providers.Google
      LlmChat.Providers.Google.API
      LlmChat.Providers.Google.Convert
      LlmChat.Providers.Google.Types
      LlmChat.Providers.OpenAI.ChatCompletion
      LlmChat.Storage.Effect
      LlmChat.Storage.InMemory
      LlmChat.Storage.Postgres
      LlmChat.Tool
      LlmChat.Types
      Effectful.OpenAI
  hs-source-dirs: src
  build-depends:
    , http-api-data
    , http-client
    , http-client-tls
    , effectful-core
    , resource-pool
    , servant
    , servant-client

test-suite llmchat-effectful-test
  import: shared_opts
  main-is: Main.hs
  other-modules:
      LlmChat.PostgresLoggerSpec
      LlmChat.PostgresPoolSpec
      LlmChat.PostgresSpec
      LlmChat.Provider.GoogleSpec
      LlmChat.Provider.OpenAISpec
      LlmChat.Storage.InMemorySpec
      ProviderAgnosticTests
  hs-source-dirs: test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      QuickCheck
    , base64-bytestring
    , llmchat-effectful
    , effectful-core
    , deepseq
    , hashable
    , hspec
    , mtl
    , pretty-simple
    , unordered-containers
    , unliftio-pool
    , yaml

executable minimal-example
  import: shared_opts
  hs-source-dirs: app
  main-is: MinimalExample.hs
  build-depends:
      llmchat-effectful
    , stm
